--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -131,6 +131,7 @@ services:
     environment:
       - ConnectionStrings__ams=${AMS_DB}
       - ConnectionStrings__IdentityAccess=${IDENTITY_ACCESS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
        
   policyserver-manager-api:
     restart: always
@@ -140,6 +141,7 @@ services:
       - ConnectionStrings__ams=${AMS_DB}
       - ConnectionStrings__IdentityAccess=${IDENTITY_ACCESS_DB}
       - CultureCode=${CULTURE_CODE:-de-DE}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
       
   policyserver-manager-userselector-api:
     restart: always
@@ -147,6 +149,7 @@ services:
       - "7613:80"
     environment:
       - ConnectionStrings__IdentityAccess=${IDENTITY_ACCESS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   #project management
   projectmanagement-api:
@@ -158,6 +161,7 @@ services:
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - IdentityServerUrl=http://identity-api
       - ConnectionStrings__ProjectManagement=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   projectmanagement:
     restart: always
@@ -184,6 +188,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - ConnectionStrings__ams=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
   
   planning-capacityutilization-api:
     restart: always
@@ -193,6 +198,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80
       - ConnectionStrings__ams=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
     
   planning-typecurve-api:
     restart: always
@@ -202,6 +208,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80
       - ConnectionStrings__ams=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
     
   wage-data-api:
     restart: always
@@ -211,6 +218,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80
       - ConnectionStrings__ams=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
     
   #accounting  
   accounting-api:
@@ -221,6 +229,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - ConnectionStrings__ams=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   projecttracking-clienthub:
     restart: always
@@ -230,6 +239,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - ConnectionStrings__ams=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   accounting-capacitydispatcher:
    restart: always
@@ -239,6 +249,7 @@ services:
      - ASPNETCORE_ENVIRONMENT=Development
      - ASPNETCORE_URLS=http://0.0.0.0:80    
      - ConnectionStrings__ams=${AMS_DB}
+     - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   accounting-integration:
     restart: always
@@ -248,6 +259,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - ConnectionStrings__ams=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   #sales orders
   salesorders-api:
@@ -258,6 +270,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - ConnectionStrings__ams=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   salesorders-integration:
     restart: always
@@ -268,6 +281,7 @@ services:
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - ConnectionStrings__ams=${AMS_DB}
       - CultureCode=${CULTURE_CODE:-de-DE}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   salesorders:
     restart: always
@@ -277,6 +291,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - ConnectionStrings__ams=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   #reporting (multiproject)
   planning-reporting-api:
@@ -287,6 +302,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80
       - ConnectionStrings__ams=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   planning-reporting-clienthub:
     restart: always
@@ -296,6 +312,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80
       - ConnectionStrings__ams=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   #production planning
   bom-api:
@@ -306,6 +323,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - ConnectionStrings__ams=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   #identity access
   identity-api:
@@ -319,6 +337,7 @@ services:
       - CultureCode=${CULTURE_CODE:-de-DE}
       - IdentityServerUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:7614
       - AdminPortalUrl=http://adminportal
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
     volumes:
       - type: bind
         source: ./profileImages
@@ -334,7 +353,8 @@ services:
       - ASPNETCORE_URLS=http://0.0.0.0:80 
       - ConnectionStrings__IdentityAccess=${IDENTITY_ACCESS_DB}
       - CultureCode=${CULTURE_CODE:-de-DE}
-      - IdentityServerUrl=http://identity-api                  
+      - IdentityServerUrl=http://identity-api      
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   identityaccess-clienthub:
     restart: always
@@ -344,6 +364,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - ConnectionStrings__IdentityAccess=${IDENTITY_ACCESS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
             
   identityaccess-emailsender:
     restart: always
@@ -360,6 +381,7 @@ services:
       - EmailSettings__Sender=${MAIL_SENDER}
       - EmailSettings__Password=${MAIL_PASSWORD}
       - EmailSettings__IsAuthenticationRequired=${MAIL_IS_AUTHENTICATION_REQUIRED}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
 
   #bff
   desktopprojectplanningcomposition:
@@ -371,6 +393,7 @@ services:
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - Urls__ProjectManagement=http://projectmanagement-api
       - Urls__SalesOrders=http://salesorders-api 
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
   
   desktopschedulingapigw:
     restart: always
@@ -389,6 +412,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - ConnectionStrings__ams=${AMS_DB}
+      - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
             
 volumes:
   esdata:
