Adding redis (used by accounting-api)

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,6 +2,13 @@ version: '3.4'
 
 services:
  
+  #redis
+  cachedata:
+    command: redis-server --include /usr/local/etc/redis/redis.conf
+    volumes:
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
+      - ./redis/data:/data
+
   # Logging
   elasticsearch:
     restart: always
@@ -309,6 +316,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - ConnectionStrings__ams=${AMS_DB}
+      - ConnectionStrings__Cache=${REDIS_DB:-cachedata}
       - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
     logging:
       driver: "json-file"
