--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -164,8 +164,6 @@ services:
   # authorization
   policyserver:
     restart: always
-    ports:
-      - "7611:80"
     environment:
       - ConnectionStrings__ams=${AMS_DB}
       - ConnectionStrings__IdentityAccess=${IDENTITY_ACCESS_DB}
@@ -207,8 +205,6 @@ services:
   #project management
   projectmanagement-api:
     restart: always
-    ports:
-      - "7601:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
@@ -250,8 +246,6 @@ services:
   #collaboration
   collaboration-api:
     restart: always
-    ports:
-      - "7602:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
@@ -265,8 +259,6 @@ services:
   
   planning-capacityutilization-api:
     restart: always
-    ports:
-      - "7606:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80
@@ -280,8 +272,6 @@ services:
     
   planning-typecurve-api:
     restart: always
-    ports:
-      - "7607:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80
@@ -295,8 +285,6 @@ services:
     
   wage-data-api:
     restart: always
-    ports:
-      - "7609:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80
@@ -311,8 +299,6 @@ services:
   #accounting  
   accounting-api:
     restart: always
-    ports:
-      - "7603:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
@@ -327,8 +313,6 @@ services:
 
   projecttracking-clienthub:
     restart: always
-    ports:
-      - "7604:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
@@ -342,8 +326,6 @@ services:
 
   accounting-capacitydispatcher:
    restart: always
-   ports:
-     - "5004:80"
    environment:
      - ASPNETCORE_ENVIRONMENT=Development
      - ASPNETCORE_URLS=http://0.0.0.0:80    
@@ -371,8 +353,6 @@ services:
   #sales orders
   salesorders-api:
     restart: always
-    ports:
-      - "7605:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
@@ -387,8 +367,6 @@ services:
 
   salesorders-integration:
     restart: always
-    ports:
-      - "5003:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
@@ -404,8 +382,6 @@ services:
 
   salesorders:
     restart: always
-    ports:
-      - "5002:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
@@ -420,8 +396,6 @@ services:
   #reporting (multiproject)
   planning-reporting-api:
     restart: always
-    ports:
-      - "7608:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80
@@ -435,8 +409,6 @@ services:
 
   planning-reporting-clienthub:
     restart: always
-    ports:
-      - "7900:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80
@@ -451,8 +423,6 @@ services:
   #production planning
   bom-api:
     restart: always
-    ports:
-      - "7618:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
@@ -473,8 +443,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
       - ConnectionStrings__IdentityAccess=${IDENTITY_ACCESS_DB}
-      - CultureCode=${CULTURE_CODE:-de-DE}
-      - IdentityServerUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:7614
+      - CultureCode=${CULTURE_CODE:-de-DE}      
+      - IdentityServerUrl=http://identity-api
       - AdminPortalUrl=http://adminportal
       - Serilog__LogstashUrl=http://${AMS_PROJECT_EXTERNAL_DNS_NAME_OR_IP}:8080
       - CertificatePath=${IDENTITY_ACCESS_CERT_PATH:-/etc/ssl/certs/identity-api.pfx}
@@ -525,8 +495,6 @@ services:
             
   identityaccess-emailsender:
     restart: always
-    ports:
-      - "7617:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
@@ -553,8 +521,6 @@ services:
   #bff
   desktopprojectplanningcomposition:
     restart: always
-    ports:
-      - "7701:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
@@ -569,8 +535,6 @@ services:
   
   desktopschedulingapigw:
     restart: always
-    volumes:
-      - ./Envoy/config/desktopscheduling:/etc/envoy
     ports:
       - "5200:80"
       - "15200:8001"
@@ -583,8 +547,6 @@ services:
 
   clienthub:
     restart: always
-    ports:
-      - "7800:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://0.0.0.0:80    
